# smart-business-ai-assistant

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  SECURITY.md  compose.yml  requirements-teaching.txt  东软智慧商务AI助手平台-技术方案指导文档-V0.1讨论稿.md  东软智慧商务AI助手平台-技术方案指导文档-V0.2讨论稿.md  东软智慧商务AI助手平台-技术方案指导文档-V0.3需求基线稿.md
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/app/: __init__.py  main.py
backend/migrations/: env.py
backend/scripts/: __init__.py  bootstrap_admin.py  bootstrap_demo_tenant.py  run_dev_server.py  verify_agent_flow.py  verify_ai_flow.py  verify_analytics_flow.py  verify_auth_flow.py  verify_conversation_flow.py  verify_customer_service_flow.py  verify_dify_flow.py  verify_feedback_flow.py  verify_knowledge_documents_flow.py  verify_knowledge_flow.py  verify_tts_flow.py
backend/tests/: conftest.py  test_agent_api.py  test_agent_graph.py  test_agent_service.py  test_agent_tools.py  test_ai_api.py  test_ai_providers.py  test_ai_repository_integration.py  test_ai_service.py  test_analytics_api.py  test_analytics_repository_integration.py  test_analytics_schemas.py  test_analytics_service.py  test_audio_api.py  test_audio_client.py  test_audio_factory.py  test_audio_service.py  test_auth_api.py  test_auth_security.py  test_auth_service.py  test_conversation_service.py  test_conversations_api.py  test_conversations_repository_integration.py  test_customer_service_api.py  test_customer_service_classification.py  test_customer_service_repository_integration.py  test_customer_service_service.py  (+22 more)
(+265 files in other folders)
