[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-business-ai-backend"
version = "0.1.0"
description = "FastAPI backend for the Smart Business AI Assistant teaching project"
requires-python = ">=3.12,<3.13"
dependencies = [
  "alembic>=1.14,<2.0",
  "dashscope>=1.26.3,<2.0",
  "fastapi>=0.115,<1.0",
  "greenlet>=3.1,<4.0",
  "httpx>=0.28,<1.0",
  "langchain>=1.3.13,<2.0",
  "langchain-deepseek>=1.1.0,<2.0",
  "langchain-qwq>=0.3.5,<1.0",
  "langgraph>=1.2.9,<2.0",
  "psycopg[binary]>=3.2,<4.0",
  "pydantic-settings>=2.7,<3.0",
  "pypdf>=5.0,<7.0",
  "PyJWT[crypto]>=2.10,<3.0",
  "pwdlib[argon2]>=0.2,<1.0",
  "python-multipart>=0.0.18,<1.0",
  "python-docx>=1.1,<2.0",
  "redis>=5.2,<7.0",
  "sqlalchemy>=2.0,<3.0",
  "uvicorn[standard]>=0.34,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<10.0",
  "pytest-asyncio>=0.25,<2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
asyncio_mode = "auto"
markers = [
  "integration: requires local PostgreSQL and Redis services",
]
